--- a/style.css
+++ b/style.css
@@ -114,3 +114,11 @@ body {
 #side-menu.open {
   left: 0;
 }
+
+/* Carte */
+#map {
+  width: 100%;
+  height: 400px;
+  background-color: #d3d3d3;
+  margin-top: 20px;
+}
