--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ header {
 .sidebar {
     position: fixed;
     top: 0;
-    right: -250px;
+    right: -250px;  /* Menu caché par défaut */
     width: 250px;
     height: 100%;
     background-color: var(--sidebar-color, #333);
@@ -73,7 +73,7 @@ header {
 }
 
 .sidebar.active {
-    right: 0;
+    right: 0;  /* Menu visible quand la classe active est ajoutée */
 }
 
 /* Menu de profil */
